Prepare for merge: технологические изменения, чтобы автоматическое слияние сработало без конфликтов

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,12 @@
 bin/*
 src/*.o
 src/util/*.o
-
-# from prool:
 config.cache
+config.log
 config.status
-*.log
-src/util/depend
-src/depend
 src/Makefile
-src/util/Makefile
 src/conf.h
+src/util/Makefile
 src/.accepted
-lib/etc/config
-lib/etc/last
-lib/etc/plrmail
-lib/etc/time
-lib/plrfiles/*
-lib/plrobjs/*
-board.immortal
-log/*
-syslog.CRASH
-.fastboot
-autolog.txt
+src/depend
+src/util/depend
